...
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <button opaque="NO" contentMode="scaleAspectFit" restorationIdentifier="guideMe" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pd4-t3-Vur">
                                <rect key="frame" x="54" y="550" width="267" height="46"/>
                                <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="35"/>
                                <state key="normal" title="Guide Me!">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                </state>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="2Rh-LH-6jI"/>
                                </connections>
                            </button>
...
                                <connections>
                                    <action selector="DecreaseFontSize:" destination="BYZ-38-t0r" eventType="touchUpInside" id="vQr-ea-ZsE"/>
                                </connections>
                            </button>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Guide Me" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="0eG-h7-O4L">
                                <rect key="frame" x="26" y="132" width="322" height="504"/>
                                <accessibility key="accessibilityConfiguration" identifier="message"/>
                                <gestureRecognizers/>
                                <fontDescription key="fontDescription" name="Courier-Bold" family="Courier" pointSize="50"/>
                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <nil key="highlightedColor"/>
                            </label>
                        </subviews>
...
